<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myfavorite.MainActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:text="1."
        android:textColor="@color/abutua"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/album"
        android:layout_toRightOf="@id/number"
        android:src="@drawable/infinitytov"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rilis"
        android:layout_toRightOf="@id/album"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/abutua"
        android:text="Released: 2015"
        android:textSize="12.5sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title: Selamanya"
        android:layout_toRightOf="@id/album"
        android:textSize="12.5sp"
        android:textColor="@color/abutua"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rilis"
        android:text="Genre: Pop"
        android:textSize="12.5sp"
        android:textColor="@color/abutua"
        android:layout_marginLeft="127dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album"
        android:id="@+id/lists"
        android:text="♫ Song Lists:"
        android:textColor="@color/abutua"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song1"
        android:layout_below="@id/lists"
        android:text="@string/dbvc"
        android:textColor="@color/abutua"
        android:layout_marginTop="3dp"
        android:textColorLink="#2196F3"
        tools:autoLink="web"
        android:linksClickable="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song2"
        android:layout_below="@id/song1"
        android:text="@string/spvc"
        android:textColor="@color/abutua"
        android:textColorLink="#2196F3"
        android:layout_marginTop="3dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song3"
        android:layout_below="@id/song2"
        android:layout_marginTop="2.5dp"
        android:textColorLink="#2196F3"
        android:text="@string/kiktvc"
        android:textColor="@color/abutua"
        android:autoLink="web"
        android:clickable="true"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song4"
        android:layout_below="@id/song3"
        android:layout_marginTop="2.5dp"
        android:autoLink="web"
        android:text="@string/mungkinvc"
        android:textColor="@color/abutua"
        android:textColorLink="#2196F3"
        android:linksClickable="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song5"
        android:layout_below="@id/song4"
        android:layout_marginTop="2.5dp"
        android:text="@string/jdsvc"
        android:textColor="@color/abutua"
        android:textColorLink="#2196F3"
        android:autoLink="web"
        android:linksClickable="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song6"
        android:layout_below="@id/song5"
        android:text="@string/alien"
        android:textColor="@color/abutua"
        android:textColorLink="#2196F3"
        android:layout_marginTop="2.5dp"
        android:autoLink="web"
        android:clickable="true"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song7"
        android:layout_below="@id/song6"
        android:text="@string/melayang"
        android:textColor="@color/abutua"
        android:autoLink="web"
        android:layout_marginTop="2.5dp"
        android:linksClickable="true"
        android:textColorLink="#2196F3"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song8"
        android:layout_below="@id/song7"
        android:text="@string/selamanya"
        android:layout_marginTop="2.5dp"
        android:textColor="@color/abutua"
        android:autoLink="web"
        android:clickable="true"
        android:textColorLink="#2196F3"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song9"
        android:layout_below="@id/song8"
        android:text="@string/cinta"
        android:layout_marginTop="2.5dp"
        android:textColor="@color/abutua"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColorLink="#2196F3"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song10"
        android:layout_below="@id/song9"
        android:text="@string/iify"
        android:autoLink="web"
        android:textColor="@color/abutua"
        android:textColorLink="#2196F3"
        android:clickable="true"
        android:layout_marginTop="2.5dp"
        android:linksClickable="true" />

</RelativeLayout>
